// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Absolute link, starting with http:// 1`] = `
<a
  className={null}
  href="http://www.domain.com/test"
  onClick={null}
  onKeyDown={null}
  onMouseDown={null}
  rel="noopener noreferrer"
  target=""
>
  ABSOLUTE LINK
</a>
`;

exports[`Absolute link, starting with https:// 1`] = `
<a
  className={null}
  href="https://www.domain.com/test"
  onClick={[Function]}
  onKeyDown={null}
  onMouseDown={null}
  rel="noopener noreferrer"
  target=""
>
  ABSOLUTE LINK
</a>
`;

exports[`Anchor link 1`] = `
<a
  className={null}
  href="#anchor"
  onClick={null}
  onKeyDown={null}
  onMouseDown={null}
  rel="noopener noreferrer"
  target=""
>
  ANCHOR LINK
</a>
`;

exports[`Relative link 1`] = `
<button
  className={null}
  onClick={[Function]}
  type="button"
>
  {"to":"http/relative/link","className":null,"onMouseDown":null,"onKeyDown":null,"replace":false,"children":"RELATIVE LINK"}
</button>
`;

exports[`Relative link, with \`enforceA\` 1`] = `
<a
  className={null}
  href="/relative/link"
  onClick={null}
  onKeyDown={null}
  onMouseDown={null}
  rel="noopener noreferrer"
  target=""
>
  RELATIVE LINK
</a>
`;

exports[`Relative link, with \`openNewTab\` 1`] = `
<a
  className={null}
  href="relative/link"
  onClick={null}
  onKeyDown={null}
  onMouseDown={null}
  rel="noopener noreferrer"
  target="_blank"
>
  RELATIVE LINL
</a>
`;
